Tidied up game.js and moved <script> after body in html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Psychic Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </head>
 <body>
     <h1>The Psychic Game</h1>
     <p>Guess what letter I'm thinking of.</p>
     <p>Wins: <span id="wins">0</span></p>
     <p>Losses: <span id="losses">0</span></p>
-    <p>Guesses Left: <span id="guesses">15</span></p>
+    <p>Guesses Left: <span id="guesses">5</span></p>
     <p>Your Guesses so far: <span id="guessList"> </span></p>
 </body>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <!-- Script goes after body so id's exist when we link them to variables in game.js -->
 </html>
